--- a/bloggers/package.json
+++ b/bloggers/package.json
@@ -8,8 +8,6 @@
 
   "dependencies": {
 
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
 
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -33,6 +31,12 @@
     "react-router-dom": "^6.14.1",
 
     "react-scripts": "5.0.1",
+
+    "react-scroll": "^1.8.9",
+
+    "react-spring": "^9.7.2",
+
+    "react-youtube": "^10.1.0",
 
     "web-vitals": "^2.1.4"
 
